; ModuleID = '/home/carl/AnghaBench/netdata/streaming/extr_rrdpush.c_rrdpush_sender_thread_send_custom_host_variables.c'
source_filename = "/home/carl/AnghaBench/netdata/streaming/extr_rrdpush.c_rrdpush_sender_thread_send_custom_host_variables.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rrdpush_sender_thread_custom_host_variables_callback = common dso_local global i32 0, align 4
@D_STREAM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"RRDVAR sent %d VARIABLES\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @rrdpush_sender_thread_send_custom_host_variables to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rrdpush_sender_thread_send_custom_host_variables(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @rrdpush_sender_thread_custom_host_variables_callback, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @rrdvar_callback_for_all_host_variables(i32* %4, i32 %5, i32* %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @D_STREAM, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @debug(i32 %9, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %10)
  ret void
}

declare dso_local i32 @rrdvar_callback_for_all_host_variables(i32*, i32, i32*) #1

declare dso_local i32 @debug(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
